fix cover background on mobile

--- a/cover.css
+++ b/cover.css
@@ -58,8 +58,13 @@ body {
  */
 
 body {
-  background-image: url(assets/img/manato.jpg);
-  background-size: cover;
+  background: url(assets/img/manato.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    height: 100%;
+    overflow: hidden; 
 }
 
 @media only screen and (max-width: 768px) {
